--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.dev.mahmoud_ashraf.weather_logger.FirstFragment"
+        android:name="com.dev.mahmoud_ashraf.weather_logger.presentation.features.home.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.dev.mahmoud_ashraf.weather_logger.SecondFragment"
+        android:name="com.dev.mahmoud_ashraf.weather_logger.presentation.features.home.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
